# tetrahedral-subdivision

./: CMakeLists.txt
include/: cut_tetrahedron.hpp  intersection_tests.hpp
src/: main.cpp
